--- a/Changes
+++ b/Changes
@@ -1,13 +1,7 @@
 Revision history for IO-ReadHandle-Include
 
-1.0.0   2018-01-30
-        First version.
-
-1.1     2018-08-03
-        Declare dependent non-core Perl modules for easier installation.
-
-        If an include file isn't found, then instead of croaking don't
-        replace the include directive.
+1.2.1   2019-06-08
+        Fix POD errors.
 
 1.2     2018-09-26
         Fix BUG in sub CLOSE.  reftype doesn't return '' but undef if
@@ -18,3 +12,12 @@ Revision history for IO-ReadHandle-Include
 
         Avoid infinite recursion when an included file indirectly
         includes itself again.
+
+1.1     2018-08-03
+        Declare dependent non-core Perl modules for easier installation.
+
+        If an include file isn't found, then instead of croaking don't
+        replace the include directive.
+
+1.0.0   2018-01-30
+        First version.
